--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "dependencies":{
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "mongoose": "8.19.3"
+    "mongoose": "^8.19.3"
   }
 }
