--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "dependencies":{
     "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.2"
+    "express": "^4.18.2"
   }
 }
